--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.4.1",
     "gatsby": "^2.18.12",
+    "gatsby-image": "^2.2.39",
     "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-sharp": "^2.4.0",
     "gatsby-plugin-styled-components": "^3.1.18",
+    "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-sharp": "^2.3.13",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
