--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-sass": "^2.1.27",
     "gatsby-plugin-sharp": "^2.4.0",
     "gatsby-plugin-styled-components": "^3.1.18",
+    "gatsby-source-contentful": "^2.1.79",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
     "node-sass": "^4.13.1",
