--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.4.1",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-playground": "^1.0.6",
     "gatsby-plugin-sass": "^2.1.27",
     "gatsby-plugin-sharp": "^2.4.0",
     "gatsby-plugin-styled-components": "^3.1.18",
@@ -27,6 +28,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
